tests/reference/asr-const_01-af8289b.stderr
semantic error: Constant variable x is not initialised at declaration.
 --> tests/errors/const_01.py:4:5
  |
4 |     x: Const[i32]
  |     ^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
